resources/authorizationserver/postgres.yaml
#####################################################################
# A basic postgres deployment for the authorization server's database
#####################################################################
kind: Service
apiVersion: v1
metadata:
  name: postgres-svc
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - protocol: "TCP"
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18.4
          volumeMounts:
          - mountPath: /docker-entrypoint-initdb.d
            name: init-scripts
            readOnly: true
          ports:
            - containerPort: 5432
              name: postgres
      volumes:
        - name: init-scripts
          configMap:
            name: postgres-configmap
